resolve hover on mobile

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
     position: absolute;
     display: block;
     left: calc(var(--fs) * 0.6);
-    font-size: calc(var(--fs) * 0.6);
+    font-size: calc(var(--fs) * 0.8);
     filter: black;
     cursor: pointer;
 }
@@ -103,15 +103,17 @@ footer a img {
     transition: all 0.2s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-footer a img:hover {
-    filter: invert(0.5);
-    -webkit-transform: scale(1.4);
-    -ms-transform: scale(1.4);
-    -moz-transform: scale(1.4);
-    -o-transform: scale(1.4);
-    transform: scale(1.4);
-    opacity: 1;
-    cursor: pointer;
+@media (hover: hover) {
+    footer a img:hover {
+        filter: invert(0.5);
+        -webkit-transform: scale(1.4);
+        -ms-transform: scale(1.4);
+        -moz-transform: scale(1.4);
+        -o-transform: scale(1.4);
+        transform: scale(1.4);
+        opacity: 1;
+        cursor: pointer;
+    }
 }
 
 @media only screen and (min-width: 900px), (orientation: "landscape") {
@@ -140,7 +142,7 @@ footer a img:hover {
 
     header {
         text-align: center;
-        font-size: var(--fs);
+        font-size: calc(var(--fs) * 0.8);
     }
 
     picture {
